public/css/index.css
.inactive {
    display: none;
}

.main-body {
    margin-top: 2vh;
}

.account,
.matches,
.classes,
.my-requests {
    margin-bottom: 5vh;
    display: grid;
    grid-gap: 3vw;
    padding-top: 10px;
    grid-auto-flow: column;
    overflow-x: auto;
}

.class-merge {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.account .block {
    height: 150px;
    display: flex;
    justify-content: center;
}

.matches .block {
    height: 300px;
    display: flex;
    justify-content: center;
}

.classes .block {
    height: 570px;
    display: flex;
    justify-content: center;
}

.end-class,
.log,
.delete-request-btn {
    color: var(--invert);
    padding: 5px 15px 5px 15px;
    font-family: Poppins;
    font-weight: 400;
    font-size: 1.1em;
    border-radius: 0.25em;
    margin-top: 3%;
    margin-left: auto;
    margin-right: auto;
    display: block;
    width: 100%;
    max-width: 400px;
}

.end-class {
    background: red;
    box-shadow: 0 0 10px orange;
}

.log,
.delete-request-btn {
    background: var(--educationist-blue);
    box-shadow: 0 0 10px var(--educationist-blue);
}

.logger input {
    width: 50%;
    margin-left: 20px;
}

.spacer {
    width: 10px;
}

.big-blocks {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin-top: 10vh;
}

.block:hover {
    background-color: var(--background-block-hover);
}

.block {
    box-shadow: 0 0 10px var(--educationist-blue);
    color: white;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    height: fit-content;
    background-color: var(--background-block);
    border-radius: 2.5rem;
    padding: 30px 30px;
    margin: 0 2vw;
    margin-bottom: 5vh;
    overflow-x: hidden;
    word-break: break-all;
    text-align: center;
    overflow-y: hidden;
}

.block-field {
    font-size: 0.9rem;
}

.small {
    width: 25%;
    min-width: 200px;
    max-width: 250px;
}

.large {
    width: 70%;
    min-width: 200px;
    max-width: 700px;
}

#volunteerHours,
#attendance {
    width: 100%;
    max-width: 700px;
}

.active {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.matching-request {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.matching-request button,
.class-merge button {
    color: var(--invert);
    background: var(--educationist-blue);
    box-shadow: 0 0 10px var(--educationist-blue);
    padding: 5px 15px 5px 15px;
    font-family: Poppins;
    font-weight: 400;
    font-size: 1.1em;
    border-radius: 0.25em;
    margin-top: 3%;
    margin-left: auto;
    margin-right: auto;
    display: block;
    width: 100%;
    max-width: 400px;
}

#subject {
    margin-bottom: 0;
    width: 100%;
    max-width: 400px;
}

#file-btn,
#certificate-btn,
#export-btn {
    cursor: pointer;
    text-align: center;
    color: var(--invert);
    background: var(--educationist-blue);
    box-shadow: 0 0 10px var(--educationist-blue);
    padding: 5px 15px 5px 15px;
    font-family: Poppins;
    font-weight: 400;
    font-size: 1.1em;
    border-radius: 0.25em;
    margin-top: 3%;
    margin-left: auto;
    margin-right: auto;
    display: block;
    width: 100%;
    max-width: 200px;
}

.upload {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    margin-top: 10vh;
    margin-bottom: 5vh;
}

